Fixes problem with unvisible header wrapper on narrow screens

--- a/src/_sass/_header.scss
+++ b/src/_sass/_header.scss
@@ -28,6 +28,8 @@
     justify-content: flex-end;
     margin-bottom: 50px;
     margin-left: 30px;
+    position: relative;
+    z-index: 10;
   }
 }
 .site-header {
